--- a/css/new-age.css
+++ b/css/new-age.css
@@ -244,6 +244,7 @@ section.features .section-heading {
 
 section.features .section-heading h2 {
   margin-top: 0;
+  font-size: 50px;
 }
 
 section.features .section-heading p {
