--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -4,6 +4,7 @@ section.features {
         margin-bottom: 100px;
         h2 {
             margin-top: 0;
+            font-size: 50px;
         }
         p {
             margin-bottom: 0;
