--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -5,7 +5,7 @@ section.contact {
         margin-top: 0;
         margin-bottom: 25px;
         i {
-            color: $brand-google-plus;
+            color: $heart;
         }
     }
     ul.list-social {
@@ -20,27 +20,27 @@ section.contact {
                 color: white;
                 border-radius: 100%;
             }
-            &.social-twitter {
+            &.social-email {
                 a {
-                    background-color: $brand-twitter;
+                    background-color: $brand-email;
                     &:hover {
-                        background-color: darken($brand-twitter, 5%);
+                        background-color: darken($brand-email, 5%);
                     }
                 }
             }
-            &.social-facebook {
+            &.social-github {
                 a {
-                    background-color: $brand-facebook;
+                    background-color: $brand-github;
                     &:hover {
-                        background-color: darken($brand-facebook, 5%);
+                        background-color: darken($brand-github, 5%);
                     }
                 }
             }
-            &.social-google-plus {
+            &.social-feedback {
                 a {
-                    background-color: $brand-google-plus;
+                    background-color: $brand-feedback;
                     &:hover {
-                        background-color: darken($brand-google-plus, 5%);
+                        background-color: darken($brand-feedback, 5%);
                     }
                 }
             }
