--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -13,6 +13,7 @@ $gray:             lighten($gray-base, 33.5%); // #555
 $gray-light:       lighten($gray-base, 46.7%); // #777
 $gray-lighter:     lighten($gray-base, 93.5%); // #eee
 
-$brand-twitter:		#1da1f2;
-$brand-facebook:	#3b5998;
-$brand-google-plus:	#dd4b39;
+$heart:		#dd4b39;
+$brand-email:		#1da1f2;
+$brand-github:	#24292e;
+$brand-feedback:	#dd4b39;
